# simple_bot_actual

./: .coverage  .gitignore  .replit  README.md  __init__.py  debug_trading.py  main.py  pyproject.toml  replit.nix  requirements.txt  run_with_symbol.py  setup.py  setup_env.bat  start.bat
backtesting/: __init__.py  engine.py  simulator.py  utils.py
config/: .env.example  config.py  strategy_config.py
docs/: QUICKSTART.md  README.md  context.md  documentation.md  pythonAPIderivDOCS.md  references.md
src/: __init__.py
src/api/: __init__.py  data_fetcher.py  deriv_connector.py
src/execution/: order_executor.py
src/monitor/: logger.py  performance.py
src/risk/: risk_manager.py
src/strategy/: moving_average.py  moving_average_strategy.py  strategy_executor.py
src/utils/: __init__.py  account_info.py  console.py  open_assets.py  put_sell_test.py
tests/: __init__.py  adjust_volatility.py  backtest_example.py  conftest.py  debug_backtest.py  test_backtest.py  test_balance.py  test_data_fetcher.py  test_deriv_connector.py  test_moving_average.py  test_order_executor.py  test_risk_manager.py
